# chopsticks-tracker

./: .gitignore  CMakeLists.txt  README.md  config.ini  pom.xml
cloud-deployment/: install.sh  main.tf  outputs.tf  variables.tf
data/supervisely-project/: construction-with-chopsticks.tar
data/training-photos/preparation-scripts/: multi_crop_at_center.py  multi_resize.py
data/yolo-model/: yolov3.cfg  yolov3.weights
src/: Application.cpp  ApplicationContext.hpp
src/main/resources/: application.properties
src/model/: Configuration.hpp  ProgramArguments.hpp  Rectangle.hpp  VideoProperties.hpp
src/model/detection/: DetectedObject.hpp  DetectedObjectType.hpp  FrameDetectionResult.hpp
src/model/tracking/: Chopstick.hpp  FrameOffset.hpp  Tip.hpp  TrackingStatus.hpp
src/provider/: VideoFrameProvider.hpp
src/provider/impl/: VideoFrameProviderImpl.cpp  VideoFrameProviderImpl.hpp
src/service/: ChopstickTracker.hpp  ConfigurationReader.hpp  ObjectDetector.hpp  TipTracker.hpp  TrackerChopstick.hpp  TrackerTip.hpp  VideoFramePainter.hpp  VideoFramePainterDetectedObjects.hpp  VideoFramePainterImage.hpp  VideoFramePainterTrackedObjects.hpp  VideoFrameReader.hpp  VideoFrameWriter.hpp
src/service/detection/: FrameDetectionResultIterator.hpp  ObjectDetectionService.hpp
src/service/impl/: ChopstickTrackerImpl.cpp  ChopstickTrackerImpl.hpp  ConfigurationReaderImpl.cpp  ConfigurationReaderImpl.hpp  ObjectDetectorCacheImpl.cpp  ObjectDetectorCacheImpl.hpp  ObjectDetectorDarknetImpl.cpp  ObjectDetectorDarknetImpl.hpp  ObjectDetectorOpenCvDnnImpl.cpp  ObjectDetectorOpenCvDnnImpl.hpp  TipTrackerImpl.cpp  TipTrackerImpl.hpp  TrackerChopstickImpl.cpp  TrackerChopstickImpl.hpp  TrackerTipImpl.cpp  TrackerTipImpl.hpp  VideoFramePainterDetectedObjectsImpl.cpp  VideoFramePainterDetectedObjectsImpl.hpp  VideoFramePainterImageImpl.cpp  (+9 more)
src/utils/: ProgramArgumentsParser.cpp  ProgramArgumentsParser.hpp  logging.hpp
(+45 files in other folders)
